--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,30 @@
 services:
+  # 前端服务
+  frontend:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "80:80"
+    depends_on:
+      - backend
+    restart: always
+
+  # 后端服务
+  backend:
+    build:
+      context: ./server
+      dockerfile: Dockerfile
+    ports:
+      - "5000:5000"
+    environment:
+      - PORT=5000
+      - MONGO_URI=mongodb://mongo:27017/dse-ict-master
+    depends_on:
+      - mongo
+    volumes:
+      - ./server/uploads:/app/uploads # 持久化上传的文件
+    restart: always
   mongodb:
     image: mongo:latest
     container_name: dse-ict-mongo
