feat: Containerize the backend server with a new Dockerfile and configure its MongoDB dependency in Docker Compose.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   # 前端服务
   frontend:
@@ -13,18 +15,19 @@ services:
   # 后端服务
   backend:
     build:
-      context: ./server
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: server/Dockerfile
     ports:
       - "5000:5000"
     environment:
       - PORT=5000
-      - MONGO_URI=mongodb://mongo:27017/dse-ict-master
+      - MONGO_URI=mongodb://mongodb:27017/dse-ict-master
     depends_on:
-      - mongo
+      - mongodb
     volumes:
       - ./server/uploads:/app/uploads # 持久化上传的文件
     restart: always
+
   mongodb:
     image: mongo:latest
     container_name: dse-ict-mongo
