--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,9 +17,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "5000:5000"
-    environment:
-      - PORT=5000
-      - MONGO_URI=mongodb://mongo:27017/dse-ict-master
+    env_file:
+      - .env
     depends_on:
       - mongo
     volumes:
@@ -34,10 +33,7 @@ services:
     volumes:
       - mongo-data:/data/db
       - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=admin
-      - MONGO_INITDB_ROOT_PASSWORD=dse_ict__master_database_admin_1234
-      - MONGO_INITDB_DATABASE=dse-ict-master
-
+    env_file:
+      - .env
 volumes:
   mongo-data:
