--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,10 @@ MONGO_INITDB_ROOT_USERNAME=admin
 MONGO_INITDB_ROOT_PASSWORD=your_password
 MONGO_INITDB_DATABASE=dse-ict-master
 PORT=5000
+
+# Optional (server will generate random password if unset)
+ADMIN_PASSWORD=change_me
+
+# Optional (for logging)
+FRONTEND_URL=http://localhost
+BACKEND_URL=http://localhost:5000
